--- a/auto-params/0.2.4/build.gradle
+++ b/auto-params/0.2.4/build.gradle
@@ -1,12 +1,16 @@
 ext.junitJupiterVersion = '5.7.0'
 ext.assertjVersion = '3.18.1'
 ext.autoParamsVersion = '0.2.4'
+ext.lombokVersion = '1.18.20'
 
 dependencies {
     testImplementation "io.github.javaunit:autoparams:${autoParamsVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitJupiterVersion}"
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testImplementation "org.assertj:assertj-core:${assertjVersion}"
+
+    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
 }
