--- a/auto-params/0.2.4/build.gradle
+++ b/auto-params/0.2.4/build.gradle
@@ -9,7 +9,7 @@ dependencies {
     testImplementation "org.junit.jupiter:junit-jupiter-params:${junitJupiterVersion}"
     testImplementation "org.assertj:assertj-core:${assertjVersion}"
 
-    compileOnly "org.projectlombok:lombok:${lombokVersion}"
+    implementation "org.projectlombok:lombok:${lombokVersion}"
     annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
 
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitJupiterVersion}"
